[package]
name = "devboard"
version = "0.1.1"
edition = "2024"
authors = ["AdamFrenzen"]
description = "Terminal dashboard for managing and running dev commands"
license = "MIT"
repository = "https://github.com/AdamFrenzen/devboard"
keywords = ["tui", "developer-tools", "tools", "command-runner", "commands"]
readme = "README.md"

[dependencies]
crossterm = "0.27"
ratatui = "0.24"
